# ot-harjoitustyo

./: .env  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: tehtävä1.md
src/: database_connection.py  index.py  kayttajat.db  pyproject.toml  sqlite.py
src/app/: app.py
src/applikaatio/: applikaatio.py
src/entities/: movie.py  user.py
src/kayttoliittyma/: kayttoliittyma.py
src/oliot/: elokuva.py  kayttaja.py
src/repot/: user_repo.py
src/tests/: register_test.py
src/ui/: login.py  register.py  ui.py
