[tool.poetry]
name = "elokuva"
version = "0.1.0"
description = ""
authors = ["KalleHahl <kalle.hahl@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
